--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
   "devDependencies": {
     "concurrently": "^3.6.1",
     "emoji-js": "^3.4.1",
-    "emoji.json": "^11.0.0",
-    "envkey": "^1.1.3",
     "eslint": "^5.4.0",
     "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-import": "^2.14.0",
@@ -30,7 +28,6 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^3.1.0",
     "jest": "^23.5.0",
-    "mastodon-api": "^1.3.0",
     "ndb": "^1.0.24",
     "nodemon": "^1.18.3",
     "prettier": "^1.14.2",
@@ -41,6 +38,9 @@
   "dependencies": {
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "emoji.json": "^11.0.0",
+    "envkey": "^1.1.3",
+    "mastodon-api": "^1.3.0"
   }
 }
