--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest tests/* --forceExit",
     "webpack": "webpack --config ./webpack.config.js --mode development",
     "webpack-watch": "webpack --config ./webpack.config.js --mode development --watch",
-    "webpack-build": "webpack --config ./webpack.config.js --mode production"
+    "webpack-build": "webpack --config ./webpack.config.js --mode production && chmod +x ./dist/index.js"
   },
   "devDependencies": {
     "concurrently": "^3.6.1",
