--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-src/scripts/vendor
-src/scripts/vendor/github
-src/scripts/vendor/npm
-.elasticbeanstalk/app_versions
+now-secrets.json
 
 # Created by https://www.gitignore.io/api/Node,Sass
 
