--- a/package.json
+++ b/package.json
@@ -5,18 +5,13 @@
   "main": "dist/index.js",
   "repository": "https://bitbucket.org/selfagency/bigtiddybot/",
   "author": "Daniel Sieradski <daniel@self.agency>",
-  "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "./node_modules/.bin/concurrently ./node_modules/.bin/ndb './node_modules/.bin/ndb nodemon --config .nodemonrc ./app.js' 'yarn webpack-watch'",
-    "start": "node ./dist/index.js",
-    "test": "jest tests/* --forceExit",
-    "webpack": "webpack --config ./webpack.config.js --mode development",
-    "webpack-watch": "webpack --config ./webpack.config.js --mode development --watch",
-    "webpack-build": "webpack --config ./webpack.config.js --mode production && chmod +x ./dist/index.js"
+    "dev": "./node_modules/.bin/ndb ./node_modules/.bin/micro-dev ./index.js",
+    "start": "micro ./index.js",
+    "test": "jest tests/* --forceExit"
   },
   "devDependencies": {
-    "concurrently": "^3.6.1",
     "eslint": "^5.4.0",
     "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-import": "^2.14.0",
@@ -26,19 +21,16 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^3.1.0",
     "jest": "^23.5.0",
+    "micro-dev": "^3.0.0",
     "ndb": "^1.0.24",
-    "nodemon": "^1.18.3",
     "prettier": "^1.14.2",
-    "prettier-eslint": "^8.8.2",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0"
+    "prettier-eslint": "^8.8.2"
   },
   "dependencies": {
-    "babel-loader": "^7.1.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "emoji.json": "^11.0.0",
     "envkey": "^1.1.3",
-    "mastodon-api": "^1.3.0"
+    "mastodon-api": "^1.3.0",
+    "micro": "^9.3.3",
+    "now-env": "^3.1.0"
   }
 }
