--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "repository": "https://bitbucket.org/selfagency/bigtiddybot/",
   "author": "Daniel Sieradski <daniel@self.agency>",
+  "license": "GPL-3.0-or-later",
   "private": false,
   "scripts": {
     "dev": "./node_modules/.bin/ndb ./node_modules/.bin/micro-dev ./index.js",
